--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html><html><head>
-<link rel="icon" href="favicon.ico" type="image/x-icon" />
+<link rel="icon" href="../../../static/assets/favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />  
 <meta charSet="utf-8"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><script src="/socket.io/socket.io.js"></script></head><body><div id="___gatsby"></div><script src="/commons.js"></script></body></html>
