--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><head>
 <link rel="icon" href="../../../static/assets/favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="../../../static/assets/favicon.ico" type="image/x-icon" />  
+  <link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css"/><script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"colors":{"popup":{"background":"#222222","text":"#ffffff","border":"#f9f9f9"},"button":{"background":"#f9f9f9","text":"#000000"}},"position":"bottom","border":"thin","margin":"none","padding":"none","fontsize":"tiny","transparency":"10","content":{"message":"By continuing to browse the site you are agreeing to our use of cookies.","button":"I understand"}})});</script>
 <meta charSet="utf-8"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><script src="/socket.io/socket.io.js"></script></head><body><div id="___gatsby"></div><script src="/commons.js"></script></body></html>
